fixed stretched images

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,14 +42,14 @@ a.contact {
 
 /* profile pic and name */
 
+
+
 .profilepic {
-    height: 500px;
-    width: 500px;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
+    /* max-width: 100%; */
    
 }
-
-
 
 
 #rightside {
@@ -132,7 +132,7 @@ h3 {
 
 
 .biopic {
-    height: 500px;
+    height: 600px;
     width: 500px;
     max-width: 100%;
     margin-left: 30px;
